Hadoop Change Log

    HADOOP-12304. Applications using FileContext fail with the default file
    system configured to be wasb/s3/etc. (cnauroth)

Release 2.7.0 - 2015-04-20

  INCOMPATIBLE CHANGES

    HADOOP-10530 Make hadoop build on Java7+ only (stevel)

  NEW FEATURES

    HADOOP-10987. Provide an iterator-based listing API for FileSystem (kihwal)

    HADOOP-7984. Add hadoop --loglevel option to change log level.
    (Akira AJISAKA via cnauroth)

    HADOOP-9629. Support Windows Azure Storage - Blob as a file system in Hadoop.
    (Dexter Bradshaw, Mostafa Elhemali, Xi Fang, Johannes Klein, David Lao,
    Mike Liddell, Chuan Liu, Lengning Liu, Ivan Mitic, Michael Rys,
    Alexander Stojanovic, Brian Swan, and Min Wei via cnauroth)

    HADOOP-10728. Metrics system for Windows Azure Storage Filesystem.
    (Dexter Bradshaw, Mostafa Elhemali, Xi Fang, Johannes Klein, David Lao,
    Mike Liddell, Chuan Liu, Lengning Liu, Ivan Mitic, Michael Rys,
    Alexander Stojanovich, Brian Swan, and Min Wei via cnauroth)

    HADOOP-8989. hadoop fs -find feature (Jonathan Allen via aw)

    HADOOP-11490. Expose truncate API via FileSystem and shell command.
    (Milan Desai via shv)

    HADOOP-11045. Introducing a tool to detect flaky tests of hadoop jenkins testing
    job. (Yongjun Zhang and Todd Lipcon via ozawa)

    HADOOP-11510. Expose truncate API via FileContext. (yliu)

    HADOOP-11569. Provide Merge API for MapFile to merge multiple similar MapFiles
    to one MapFile. (Vinayakumar B via ozawa)

  IMPROVEMENTS

    HADOOP-11483. HardLink.java should use the jdk7 createLink method (aajisaka)

    HADOOP-11156. DelegateToFileSystem should implement
    getFsStatus(final Path f). (Zhihai Xu via wang)

    HADOOP-11172. Improve error message in Shell#runCommand on OutOfMemoryError.
    (Yongjun Zhang via wang)

    HADOOP-10748. HttpServer2 should not load JspServlet. (wheat9)

    HADOOP-6857. FsShell should report raw disk usage including replication